--- a/src/pages/banner.css
+++ b/src/pages/banner.css
@@ -1,13 +1,12 @@
-.banner{
+.banner {
     position: relative;
     width: 100%;
     min-height: 100vh;
-    /* padding: 0 100px; */
     overflow: hidden;
     transition: 0.5s;
 }
 
-.banner::after{
+.banner::after {
     position: absolute;
     content: '';
     top: 0;
@@ -17,9 +16,10 @@
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.6);
+    z-index: 1;
 }
 
-.banner .movie{
+.banner .movie {
     padding: 0 100px;
     position: relative;
     top: 0;
@@ -31,9 +31,10 @@
     align-items: center;
     overflow: hidden;
     padding-bottom: 100px;
+    z-index: 2;
 }
 
-.bgImg{
+.bgImg {
     position: absolute;
     top: 0;
     left: 0;
@@ -47,13 +48,82 @@
     transition: 1s;
 }
 
-.bgImg.active{
+.bgImg.active {
     visibility: visible;
     opacity: 1;
 }
 
 .movie-left, .movie-right {
     flex: 1;
-    min-width: 300px; /* or whatever you want as minimum */
+    min-width: 300px;
     padding: 20px;
-  }  
+    position: relative;
+    z-index: 2;
+}
+
+/* Responsive styles for mobile */
+@media (max-width: 992px) {
+    .banner .movie {
+        padding: 0 50px;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+        padding-bottom: 120px;
+    }
+    
+    .movie-left, .movie-right {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 10px;
+    }
+    
+    .movie-right {
+        margin-top: 20px;
+    }
+}
+
+@media (max-width: 768px) {
+    .banner .movie {
+        padding: 0 20px;
+        padding-bottom: 150px;
+    }
+}
+
+@media (max-width: 576px) {
+    .banner {
+        min-height: auto;
+    }
+    
+    .banner .movie {
+        height: auto;
+        min-height: 100vh;
+        padding: 60px 15px;
+        padding-bottom: 160px;
+    }
+    
+    .movie-left, .movie-right {
+        min-width: unset;
+    }
+}
+
+/* MovieSwiper responsive adjustments */
+@media (max-width: 768px) {
+    .swiper {
+        margin-top: 20px;
+        padding: 0 20px !important;
+    }
+    
+    .swiper-slide {
+        width: 120px !important;
+        height: 180px !important;
+    }
+}
+
+@media (max-width: 576px) {
+    .swiper-slide {
+        width: 100px !important;
+        height: 150px !important;
+    }
+}
